# editor_server

./: .gitignore  main.py  pyproject.toml  server.py
app/: main.py
app/core/: __init__.py  config.py  database.py  s3.py
app/models/: __init__.py  category.py  document.py  script_line.py  speaker.py
app/routes/: __init__.py  categories.py  documents.py  editor.py
app/schemas/: __init__.py  documents.py
app/services/: __init__.py  categories.py  documents.py
app/utils/: __init__.py  docx.py  pre_process.py  s3.py  zip.py
data/: 통화_녹음_김창용대표님_240927_112535.txt  통화_녹음_김창용대표님_240927_113505.m4a
